test/tests/operators/each/bytes_output.txt
error: pipeline inside `each` must not produce bytes
 --> tests/operators/each/bytes_output.tql:5:6
  |
5 | each {
  |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
  |
